# zevy

./: .gitignore  CONTRIBUTING.md  LICENSE.txt  README.md  buildozer.spec  main.py  requirements.txt  zevy.spec
.github/workflows/: build.yml
crypto_rust/: Cargo.toml
crypto_rust/src/: lib.rs
docs/: implementation_plan.md  software_design_document.md  software_requirement_specification.md
network/: __init__.py  bluetooth.py  manager.py  mdns_fallback.py  protocol.py  wifi_direct.py
tests/: test_crypto.py  test_mdns.py  test_network.py  test_protocol.py
ui/: __init__.py  components.kv  screens.py
