[package]
name = "crypto_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "crypto_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
ark-ff = "0.4.0"
ark-ec = "0.4.0"
ark-std = "0.4.0"
ark-groth16 = "0.4.0"
ark-relations = "0.4.0"
ark-bn254 = "0.4.0"
ark-serialize = "0.4.0"
ark-snark = "0.4.0"
rand = "0.8"
hex = "0.4.3"

[target.'cfg(target_arch = "x86_64")'.dependencies]
tfhe = { version = "0.7", features = ["boolean", "x86_64"] }

[target.'cfg(not(target_arch = "x86_64"))'.dependencies]
tfhe = { version = "0.7", features = ["boolean", "aarch64"] }
